--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li><b>1963</b> - During the eleven days he spent in jail, MLK writes his famous Letter from a Birmingham Jail.</li>
         <li><b>1986</b> - On November 2, a national holiday is proclaimed in King’s honor.</li>
       </ul>
+      <p id="citation">Information sourced from <a href="https://guides.lib.lsu.edu/c.php?g=353667&p=2385247">Louisiana State University</a></p>
       <p class="quote-bottom">“I have a dream that one day this nation will rise up and live out the true meaning of its creed: 'We hold these truths to be self-evident, that all men are created equal. '” ― Martin Luther King Jr. “Injustice anywhere is a threat to justice everywhere.”<p>
       <p class="redirect">If you have more time to read about this incredible human being, please click 
       <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Martin_Luther_King_Jr.">here</a>
